// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`translation verify should fail under strict when translations are missing 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Translation key missing: st_medkit_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ukr in <resources>/translations/st_items.json",
    "Check failed: 11 finding(s)",
  ],
  "stdout": [
    "Verifying translation <resources>/translations, language - all",
    "Verifying dir <resources>/translations",
    "Skip file <resources>/translations/st_shared.xml",
    "Skip file <resources>/translations/st_ui.eng.xml",
    "Skip file <resources>/translations/st_ui.rus.xml",
    "Verified translation files in <duration>, 2 checked, 11 missing",
  ],
}
`;

exports[`translation verify should find nothing missing in a complete language 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Verifying translation <resources>/translations, language - eng",
    "Verifying dir <resources>/translations",
    "Skip file <resources>/translations/st_shared.xml",
    "Skip file <resources>/translations/st_ui.eng.xml",
    "Skip file <resources>/translations/st_ui.rus.xml",
    "Verified translation files in <duration>, 2 checked, 0 missing",
  ],
}
`;

exports[`translation verify should report gaps across every language 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Translation key missing: st_medkit_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ukr in <resources>/translations/st_items.json",
  ],
  "stdout": [
    "Verifying translation <resources>/translations, language - all",
    "Verifying dir <resources>/translations",
    "Skip file <resources>/translations/st_shared.xml",
    "Skip file <resources>/translations/st_ui.eng.xml",
    "Skip file <resources>/translations/st_ui.rus.xml",
    "Verified translation files in <duration>, 2 checked, 11 missing",
  ],
}
`;

exports[`translation verify should report the gaps it found 1`] = `
{
  "command": [
    "translation",
    "verify",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "checkedTranslationsCount": 2,
    "checks": [
      {
        "duration": "<duration>",
        "findings": [
          {
            "message": "Missing translation for key 'st_bread_name' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'ger'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'ger'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'ukr'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
        ],
        "id": "translations",
        "status": "failed",
      },
    ],
    "duration": "<duration>",
    "missingTranslationsCount": 11,
    "status": "failed",
  },
}
`;

exports[`translation verify should write a structured report 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Translation key missing: st_medkit_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ukr in <resources>/translations/st_items.json",
  ],
  "stdout": [
    "Verifying translation <resources>/translations, language - all",
    "Verifying dir <resources>/translations",
    "Skip file <resources>/translations/st_shared.xml",
    "Skip file <resources>/translations/st_ui.eng.xml",
    "Skip file <resources>/translations/st_ui.rus.xml",
    "Verified translation files in <duration>, 2 checked, 11 missing",
  ],
}
`;

exports[`translation verify should write only the report 1`] = `
[
  {
    "path": "report.json",
    "sha256": "dbc3ffa5b54e7b4ea0a14d33474fc9ed728c0d3c5190c694319f8e789a3ab954",
    "size": 2904,
  },
]
`;
